[gd_scene load_steps=12 format=3 uid="uid://e1bi5rviiufr"]

[ext_resource type="Script" path="res://Entities/Ship/ship.gd" id="1_i8hbr"]
[ext_resource type="Texture2D" uid="uid://om46hfkv7o05" path="res://Sprites/ship.png" id="2_g8wrt"]
[ext_resource type="Script" path="res://Entities/Ship/dash.gd" id="4_aff75"]
[ext_resource type="PackedScene" uid="uid://dqbhnlhp2nkmx" path="res://Entities/Ship/lance.tscn" id="5_aex22"]
[ext_resource type="Script" path="res://Entities/Ship/action.gd" id="5_rp1k1"]
[ext_resource type="Script" path="res://Logic/hurtbox.gd" id="6_cf3ti"]
[ext_resource type="FontFile" uid="uid://cjg5r33t68mr1" path="res://fonts/PressStart2P-vaV7.ttf" id="7_5eqxg"]
[ext_resource type="PackedScene" uid="uid://7o7u14iydxi0" path="res://Entities/Ship/shield.tscn" id="8_58v7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl71k"]
size = Vector2(142, 80)

[sub_resource type="LabelSettings" id="LabelSettings_t50ld"]
font = ExtResource("7_5eqxg")
font_size = 20
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mfsuh"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Name_Label:rotation")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Lance:visible")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Lance:collision_layer")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("Lance:collision_mask")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("Shield:visible")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath("Shield:collision_layer")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath("Shield:collision_mask")
properties/8/spawn = true
properties/8/replication_mode = 2

[node name="Ship" type="CharacterBody2D" groups=["Players"]]
position = Vector2(-1, 0)
script = ExtResource("1_i8hbr")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(7.875, 7.875)
texture = ExtResource("2_g8wrt")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, -62, 8, -62, 67, 19, 67, 65, -66, 65, -66, 16)

[node name="Action_Timer" type="Timer" parent="."]
script = ExtResource("5_rp1k1")

[node name="Dash_Cooldown" type="Timer" parent="."]
one_shot = true
script = ExtResource("4_aff75")

[node name="Lance" parent="." instance=ExtResource("5_aex22")]
position = Vector2(0, -101)

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("6_cf3ti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 30)
shape = SubResource("RectangleShape2D_yl71k")

[node name="Shield" parent="." instance=ExtResource("8_58v7v")]
visible = false
position = Vector2(0, 14)

[node name="Name_Label" type="Label" parent="."]
auto_translate_mode = 2
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 95.0
offset_right = 102.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(99, -92)
size_flags_horizontal = 4
text = "BOT"
label_settings = SubResource("LabelSettings_t50ld")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mfsuh")

[connection signal="timeout" from="Action_Timer" to="Action_Timer" method="_on_action_timeout"]
